# cd-framework

./: .gitignore  README.md  config.py  dataset.py  plot_results.py  pyproject.toml  runner.py  visualize.py
checkpoints/baseline/: epoch_10.pth  epoch_5.pth  history.csv
checkpoints/deeplab/: history.csv
checkpoints/hrnet/: history.csv
checkpoints/resnet18/: history.csv
checkpoints/unet_resnet18/: history.csv
models/: baseline.py  deeplab.py  factory.py  hrnet.py  resnet_siam.py  unet_resnet.py
utils/: metrics.py  trainer.py
